--- a/shop/src/components/scss/Cart.scss
+++ b/shop/src/components/scss/Cart.scss
@@ -52,7 +52,7 @@ justify-content: space-between;
     }
 
 
-& .delete{
+& .details--delete{
     color: crimson;
     cursor: pointer;
     font-weight: 900;
