--- a/shop/src/components/scss/Contact.scss
+++ b/shop/src/components/scss/Contact.scss
@@ -48,9 +48,8 @@ height: 100%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
- font-family: cursive;
- 
  font-size: 30px;
+ white-space: nowrap;
 }
 
 &--us {
@@ -119,12 +118,10 @@ clip-path: none;
 }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 820px) {
 
 &--socials {
- //   &--socials i {
-// font-size: 24px;
-// }
+
 
 & a span{
 display: none;
