--- a/shop/src/components/scss/Home.scss
+++ b/shop/src/components/scss/Home.scss
@@ -49,73 +49,43 @@ padding: 15px 10px;
 }
 
 .btn {
-  padding: 0.7em 2em;
+  padding: 0.7rem 2rem;
 }
 }
 
-
-@media (max-width:420px) {
-
-
+@media (max-width: 830px) {
 &--details h3 {
  font-size: 1.5rem;
+margin-bottom: 2.3rem;
 }
 &--details h2 {
  font-size: 1.9rem;
 }
 .btn {
-  padding: 0.7em 1.2em;
+  padding: 0.7rem 1.2rem;
 }
+}
+@media (max-width:700px) and (orientation: landscape) {
+&--details h3 {
+ font-size: 1rem;
+}
+&--details h2 {
+ font-size: 1.5rem;
 }
 }
 
+@media (max-width:420px) {
+
+
+&--details h3 {
+ font-size: 1.2rem;
+}
+&--details h2 {
+ font-size: 1.7rem;
+}
 .btn {
-  background-color: transparent;
-  border: 2px solid rgb(41, 181, 206);
-  border-radius: 0.6em;
-  cursor: pointer;
-  align-self: center;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1;
-  padding: 1.2em 2.8em;
-  text-decoration: none;
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 700;
-  overflow: hidden;
+  padding: 0.7rem 1.2rem;
 }
-.btn:hover, .btn:focus {
-  color: #fff;
-  outline: 0;
-  border: none;
+}
 }
 
-.fill {
-  margin: 25px;
-  border-radius: 0;
-  color: rgb(43, 203, 224);
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  transition: color .3s ease-in-out;
-}
-.fill:after {
-  content: '';
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 46%;
-  transform: translateX(-46%);
-  width: 0;
-  height: 100%;
-  background-color: var(--lightblue);
-  z-index: -1;
-  transition: width .3s ease-in-out;
-}
-.fill:hover {
-  color: #fff;
-}
-.fill:hover:after {
-  width: 100%;
-}
