--- a/shop/src/components/scss/Header.scss
+++ b/shop/src/components/scss/Header.scss
@@ -8,7 +8,6 @@ header{
      box-shadow: 0 0 5px #ccc;
 
 
-
 & .logo a{
     text-decoration: none;
     text-transform: uppercase;
@@ -72,7 +71,7 @@ header{
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
   background: white;
@@ -80,7 +79,7 @@ header{
   opacity: 0.97;
   transition: 0.5s linear;
   padding: 0;
-    margin: 0;
+  margin: 0;
  }
 
  nav .nav-cart span{
